corrected grph for posts

--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talha — Portfolio</title>
-    <meta name="description" content="Muhammad Talha — Computer Science student and developer. I build web apps with Python, AI/ML and modern JavaScript. View projects, resume, and contact me." />
-    <meta name="theme-color" content="#0b0430" />
-    <!-- Open Graph / Social Preview -->
-    <meta property="og:title" content="Muhammad Talha — Portfolio" />
-    <meta property="og:description" content="I build web apps with Python, AI/ML and modern JavaScript. View projects, resume, and contact me." />
-    <meta property="og:image" content="/icons/og-image.png" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Muhammad Talha — Portfolio" />
-    <meta name="twitter:description" content="I build web apps with Python, AI/ML and modern JavaScript. View projects, resume, and contact me." />
-    <!-- Google Fonts: Inter (body) + Poppins (headings) -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
 
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Talha — Portfolio</title>
+  <meta name="description"
+    content="Muhammad Talha — Computer Science student and developer. I build web apps with Python, AI/ML and modern JavaScript. View projects, resume, and contact me." />
+  <meta name="theme-color" content="#0b0430" />
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="Muhammad Talha — Portfolio" />
+  <meta property="og:description"
+    content="I build web apps with Python, AI/ML and modern JavaScript. Check out my projects and skills." />
+  <!-- IMPORTANT: Replace the domain below with your actual Vercel/live domain -->
+  <meta property="og:url" content="https://webain-personal-portfolio.vercel.app/" />
+  <meta property="og:image" content="https://webain-personal-portfolio.vercel.app/og-image.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Muhammad Talha — Portfolio" />
+  <meta name="twitter:description" content="I build web apps with Python, AI/ML and modern JavaScript." />
+  <meta name="twitter:image" content="https://webain-personal-portfolio.vercel.app/og-image.png" />
+  <!-- Google Fonts: Inter (body) + Poppins (headings) -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
