--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <!-- IMPORTANT: Replace the domain below with your actual Vercel/live domain -->
   <meta property="og:url" content="https://my-personal-portfolio-azure-zeta.vercel.app/" />
   <meta property="og:image" content="https://my-personal-portfolio-azure-zeta.vercel.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Muhammad Talha — Portfolio" />
